mongo atlas added

--- a/credit-card-service/CreditCardService/appsettings.json
+++ b/credit-card-service/CreditCardService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "CreditCardDBSettings": {
     "CreditCardCollectionName": "CreditCard",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://denizburcu:CvC5qoYZtute2FaR@cluster0.vtredi5.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "creditmongo"
   },
   "AllowedHosts": "*"
